--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,9 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "@rocketseat/eslint-config/react"
-  ],
+  "extends": ["next/core-web-vitals", "@rocketseat/eslint-config/react"],
   "rules": {
     "camelcase": "off",
     "no-unused-vars": "off",
-    "no-undef": "off"
+    "no-undef": "off",
+    "prettier/prettier": "off"
   }
 }
